--- a/jadwal.html
+++ b/jadwal.html
@@ -7,11 +7,11 @@
 <h2><center> JADWAL KULIAH SEMESTER SAYA </h2></center>
 
 <style>
-th {background-color: blue; color:black;}
+th {background-color: rgb(208, 174, 0); color:black;}
 table {margin: auto; top: 500px; width: 1000px; height: 500px}
-.isi {background: yellow; color:#000; padding: 5px;}
-.isi1 {background: red; color:#fff; padding: 5px;}
-.isi2 {background: blue; color:#000; padding: 5px;}
+.isi {background: rgb(208, 157, 0); color:#000; padding: 5px;}
+.isi1 {background: yellow; color:#000; padding: 5px;}
+.isi2 {background: rgb(208, 174, 0); color:#000; padding: 5px;}
 </style>
 	<table border="2" cellspacing ="0">
 	<tr>
