--- a/video.html
+++ b/video.html
@@ -8,6 +8,9 @@
 	
 </head>
 <body>
+
+<center><h2><p style ="color:white;font-family:lato-blackitalic">
+Content Video From My Instagram Story</p></center>
 	<div class ="container">
 	<div class ="box">
 		<div class="imgBox">
@@ -42,7 +45,6 @@
 					<source src="media\kopi.ogg" type="video/ogg">
 		</div>
 		</div>
-	
 		
 		</div>
 </body>
