--- a/biodata.html
+++ b/biodata.html
@@ -72,6 +72,25 @@ footer {
     height: auto;
   }
 }
+	@media only screen and (max-width:800px) {
+  /* For tablets: */
+  .main {
+    width: 80%;
+	display:table;
+    padding: 0;
+  }
+  .right {
+    width: 100%;
+  }
+}
+@media only screen and (max-width:500px) {
+  /* For mobile phones: */
+  .menu, .main, .right {
+    width: 100%;
+  }
+}
+	
+	
 </style>
 </head>
 <body>
