--- a/login.html
+++ b/login.html
@@ -6,6 +6,11 @@
 	<link rel="stylesheet" href="cobacss1.css">	
 
 <body>
+	
+	<div class ="kembali">
+		<a href="index.html">
+		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
+		</div>
 <form>
 <div class="login-box">
 <h1>Isi Form</h1>
