--- a/galeri.html
+++ b/galeri.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+		<div class ="kembali">
+		<a href="index.html">
+		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
+		</div>
+		<center><h1><p style ="color:yellow;font-family:lato-blackitalic">
+FORTOFOLIO JERPRETAN KAMEK</h1></p></center>
 	<div class ="container">
 	<div class ="box">
 		<div class="imgBox">
