--- a/foto.html
+++ b/foto.html
@@ -3,6 +3,12 @@
 <head>
 <title>FORTOFOLIO FOTO </title>
 <body>
+		<div class ="kembali">
+		<a href="index.html">
+		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
+		</div>
+		<center><h1><p style ="color:yellow;font-family:lato-blackitalic">
+FORTOFOLIO JERPRETAN KAMEK</h1></p></center>
 <center>
 <h2><p style ="color:blue;lato-blackitalic"><b>FORTOFOLIO FOTO</b></h2></p><pre>
 <style>
