--- a/video.html
+++ b/video.html
@@ -8,6 +8,10 @@
 	
 </head>
 <body>
+		<div class ="kembali">
+		<a href="index.html">
+		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
+		</div>
 
 <center><h2><p style ="color:white;font-family:lato-blackitalic">
 Content Video From My Instagram Story</p></center>
