--- a/jadwal.html
+++ b/jadwal.html
@@ -4,6 +4,10 @@
 <title> Jadwal Pribadi </title>
 <head>
 <body>
+	<div class ="kembali">
+		<a href="index.html">
+		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
+	</div>
 <h2><center> JADWAL KULIAH SEMESTER SAYA </h2></center>
 
 <style>
