--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 			</ul>
 			</div>
 			<div class="title">
-			<h1>"WELCOME"</h1>
+			<h1>"WELCOME"</h1><br>
 			<h2>Hai, saya Alda Dwi Meilinda merupakan Mahasiswi Informatika UNTAN<br>
-			tahun angkatan 2017. "Coba aja di klik <I>toolbarnya</I>, mana tau bisa jadi teman"
-			</h2>
+			tahun angkatan 2017."Coba aja di klik <I>toolbarnya</I>, mana tau bisa jadi teman"<br><br><br><br></h2>
 			</div>
 			
 			<div class="button">
