--- a/biodata.html
+++ b/biodata.html
@@ -7,12 +7,12 @@
 <style>
 @media only screen and (max-width:800px) {
   /* For tablets: */
-  .main {
+  .header {
     width: 80%;
 	display:table;
     padding: 0;
   }
-  .right {
+  .nav {
     width: 100%;
   }
 }
