--- a/biodata.html
+++ b/biodata.html
@@ -18,7 +18,7 @@
 }
 @media only screen and (max-width:500px) {
   /* For mobile phones: */
-  .menu, .main, .right {
+  .header, .nav, .article {
     width: 100%;
   }
 }
@@ -83,7 +83,7 @@ footer {
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
+@media only screen and (max-width: 600px) {
   nav, article {
     width: 100%;
     height: auto;
