--- a/biodata.html
+++ b/biodata.html
@@ -12,8 +12,8 @@
 	display:table;
     padding: 0;
   }
-  .nav {
-    width: 100%;
+  .nav , .footer{
+    width: 60%;
   }
 }
 @media only screen and (max-width:500px) {
@@ -158,12 +158,13 @@ Aplikasi Editor Yang Sering digunakan</h2>
   </nav>
   <article>
   
-<pre><h2><p style ="color:blue;font-family:lato-blackitalic"><b><b>
+<h2><p style ="color:blue;font-family:lato-blackitalic"><b><b>
 DATA LENGKAP DIRI</b></p></h2>				 
 	Nama		: ALDA DWI MEILINDA 									
 	Nim		: D1041171001
 	Jenis Kelamin	: Perempuan 
-	Alamat		: Jl.P. Daranante Gg. Nurcahaya No.49 A
+	Alamat		: Jl.P. Daranante Gg. Nurcahaya
+	  			No.49 A
 	Asal		: Kota Pontianak
 <h2><p style ="color:blue;lato-blackitalic"><b><B>DATA PENDIDIKAN</B></b></p></h2>
 	Pendidikan
@@ -178,7 +179,8 @@ Kalimat Motivasi	:<i><B> Maintan your standard and dont invest too much,keep you
 	2009-2010	: 1. Paskibra SD Negeri 26 Pontianak
 			  2. Bridge SD Negeri 26 Pontianak<br>
 	2011-2014	: 1. Paskibra SPANSEL Angkatan XVII<br>
-	2015-2017	: 1. Bidang DIKRAN Pramuka Airrama Angkatan XXXVIII <br>
+	2015-2017	: 1. Bidang DIKRAN Pramuka Airrama 
+				Angkatan XXXVIII <br>
 	2017-2018	: 1. Bidang  Acara INFORMERS'14
 			  2. Master Of Ceremony INFORMERS'14<br>
 	2018-2019	: 1. Bidang KOMINFO HMIF
@@ -186,13 +188,14 @@ Kalimat Motivasi	:<i><B> Maintan your standard and dont invest too much,keep you
 			  3. Master Of Ceremony INFORMERS'15</b>
 <h2><p style ="color:blue;font-family:lato-blackitalic"><b><b>
 	SERTIFIKAT</P></H2></B>
-	2010		: 1. Juara 3 Bridge Competition se-Pontianak<br>
+	2010		: 1. Juara 3 Bridge Competition 
+				se-Pontianak<br>
 	2012		: 1. Juara 1 EGP (Ekspresi Gaya Pelajar)<br>
 	2016		: 1. Juara 1 Gatsu Camp bidang Senam Pramuka
-			  2. Juara 3 Pionering IAIN bidang tali temali<br>
-	2019		: 1. Juara 3 Design User Interface topik Creating Solution For Pontianak <br>
+			  2. Juara 3 Pionering IAIN <br>
+	2019		: 1. Juara 3 Design User Interface 
+			topik Creating Solution For Pontianak <br>
 </p>
-</pre>
   </article>
 </body>
 </html>
