--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					</div>
 			<ul>
 				<li class="active"><a>HOME</a></li>
-				<li><a href="Biodata.html">Biodata Diri</a></li>
+				<li><a href="biodata.html">Biodata Diri</a></li>
 				<li><a>MEDIA</a>
 						<ul><li><a href="foto.html">HUT<br>INFORMERS</a></li>
 						<li><a href ="galeri.html">Jepretan<br>Kamek</a></li>
