--- a/galeri.html
+++ b/galeri.html
@@ -13,8 +13,8 @@
 		<a href="index.html">
 		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
 		</div>
-		<center><h1><p style ="color:yellow;font-family:lato-blackitalic">
-FORTOFOLIO JERPRETAN KAMEK</h1></p></center>
+		<center><h1><p style ="color:yellow;font-family:lato-blackitalic"><marquee>
+FORTOFOLIO JEPRETAN KAMEK</h1></p></center></marquee>
 	<div class ="container">
 	<div class ="box">
 		<div class="imgBox">
