--- a/video.html
+++ b/video.html
@@ -8,13 +8,14 @@
 	
 </head>
 <body>
+
 		<div class ="kembali">
 		<a href="index.html">
 		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
 		</div>
 
-<center><h2><p style ="color:white;font-family:lato-blackitalic">
-Content Video From My Instagram Story</p></center>
+<center><h2><p style ="color:white;font-family:lato-blackitalic"><marquee>
+Content Video From My Instagram Story</p></center></marquee>
 	<div class ="container">
 	<div class ="box">
 		<div class="imgBox">
@@ -51,6 +52,11 @@ Content Video From My Instagram Story</p></center>
 		</div>
 		
 		</div>
+		<center><br><br>
+		<audio width="500px" height="300px" controls>
+		<source src="media\01 Payung Teduh Akad.mp3" type="audio/mpeg">
+		<source src="media\01 Payung Teduh Akad.ogg" type="audio/ogg">
+		</audio></center>
 </body>
 </head>
 </html>
