--- a/jadwal.html
+++ b/jadwal.html
@@ -4,10 +4,11 @@
 <title> Jadwal Pribadi </title>
 <head>
 <body>
-	<div class ="kembali">
+
+<div class ="kembali">
 		<a href="index.html">
 		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
-	</div>
+		</div>
 <h2><center> JADWAL KULIAH SEMESTER SAYA </h2></center>
 
 <style>
@@ -99,5 +100,9 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 </table>
 <br>
 <br>
+<center>
+<p style="color:black"; font-family="sans-serif"><b><h2>
+Untuk Lebih Detail, silahkan <i>input username </i> dan NIM anda di bawah ini</b></p></h2>
+<iframe src="http://mahasiswa.siakad.untan.ac.id/" width="600px" height="300px"></iframe>
 </body>
 </html>
