--- a/jadwal.html
+++ b/jadwal.html
@@ -17,6 +17,7 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 .isi {background: rgb(208, 157, 0); color:#000; padding: 5px;}
 .isi1 {background: yellow; color:#000; padding: 5px;}
 .isi2 {background: rgb(208, 174, 0); color:#000; padding: 5px;}
+.akun {margin: auto; top: 500px; width: 1000px; height: 500px}
 </style>
 	<table border="2" cellspacing ="0">
 	<tr>
@@ -70,7 +71,7 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 			<td class="isi1"><b>INF-55201-306</b></td>
 			<td class="isi1">	Manajemen Proyek Perangkat Lunak</td>
 			<td class="isi1">	Selasa</td>
-			<td class="isi1">	13.10-14.50/td>
+			<td class="isi1">	13.10-14.50</td>
 			<td class="isi1">Novi Safriadi, ST.,MT</td>
 	</tr>
 	
@@ -100,9 +101,10 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 </table>
 <br>
 <br>
-<center>
-<p style="color:black"; font-family="sans-serif"><b><h2>
-Untuk Lebih Detail, silahkan <i>input username </i> dan NIM anda di bawah ini</b></p></h2>
-<iframe src="http://mahasiswa.siakad.untan.ac.id/" width="600px" height="300px"></iframe>
+<h2><center> Silahkan Cek Jadwal Mata Kuliah Anda dengan SIAKAD UNTAN </h2></center>
+
+		<div class="akun">
+<iframe src="http://mahasiswa.siakad.untan.ac.id/"width="1000px" height="500px"></iframe>
+</div>
 </body>
 </html>
