--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
 </div>
 
 <button class="btn" type="reset" value="Reset"/>RESET</button>
-<button class="btn" type="submit" value="submit"/>SUBMIT</button>
+<button class="btn" type="submit" value="submit"onclick="alert('Selamat Datang,Hatur Nuhun Sahadayana')">SUBMIT</button>
 </div>
 
 </form>
