--- a/video.html
+++ b/video.html
@@ -53,10 +53,9 @@ Content Video From My Instagram Story</p></center></marquee>
 		
 		</div>
 		<center><br><br>
-		<audio width="500px" height="300px" controls>
-		<source src="media\01 Payung Teduh Akad.mp3" autoplay="autoplay" hidden="hidden">
-		<source src="media\01 Payung Teduh Akad.ogg" autoplay="autoplay" hidden="hidden">
-		</audio></center>
+		<audio src="media\01 Payung Teduh Akad.mp3" autoplay="autoplay" hidden="hidden">
+		<audio src="media\01 Payung Teduh Akad.ogg" autoplay="autoplay" hidden="hidden">
+		</audio></center></audio>
 </body>
 </head>
 </html>
