--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
 				<a href="login.html" class="btn">FORM KUNJUNGAN</a>
 				</div>
 	</header>
+	
+		<audio src="media\lastjedi.mp3" autoplay="autoplay" hidden="hidden">
+		<audio src="media\lastjedi.ogg" autoplay="autoplay" hidden="hidden">
+		</audio></audio>
 </body>
 </html>
