--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				</div>
 	</header>
 	
-		<audio src="media\lastjedi.mp3" autoplay="autoplay" hidden="hidden">
-		<audio src="media\lastjedi.ogg" autoplay="autoplay" hidden="hidden">
+		<audio src="lastjedi.mp3" autoplay="autoplay" hidden="hidden">
+		<audio src="lastjedi.ogg" autoplay="autoplay" hidden="hidden">
 		</audio></audio>
 </body>
 </html>
