--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 					<img src="logo.png">
 					</div>
 			<ul>
-				<li class="active"><a>HOME</a></li>
-				<li><a href="biodata.html">Biodata Diri</a></li>
-				<li><a>MEDIA</a>
+				<li class="active"><a><b>HOME</b></a></li>
+				<li><a href="biodata.html"><b>Biodata Diri</b></a></li>
+				<li><a><b>MEDIA</b></a>
 						<ul><li><a href="foto.html">HUT<br>INFORMERS</a></li>
-						<li><a href ="galeri.html">Jepretan<br>Kamek</a></li>
-					<li><a href="video.html"> Video<br>Audio</a></li>
+							<li><a href ="galeri.html"><b>JEPRETAN<br>KAMEK</b></a></li>
+							<li><a href="video.html"><b>Video<br>Audio</b></a></li>
 					</ul></li>
-				<li><a href="jadwal.html">Jadwal Pribadi</a></li>
+				<li><a href="jadwal.html"><b>Jadwal Pribadi</b></a></li>
 			</ul>
 			</div>
 			<div class="title">
