--- a/login.html
+++ b/login.html
@@ -5,12 +5,21 @@
 	<title>Form Login Kunjungan</title>
 	<link rel="stylesheet" href="cobacss1.css">	
 	
+<style>
+	@media (max-width :600px)
+{
+	.kembali img{
+		width: 100%;
+		height:50%;
+	}
+}
+</style>
 
 <body>
 
 		<div class ="kembali">
 		<a href="index.html">
-		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
+		<img src="back.png" alt="back.png" width="100px" height="auto"/><a>
 		</div>
 <form>
 <div class="login-box">
@@ -37,6 +46,11 @@
 </div>
 
 <div class="textb">
+<label> Email Address:</label>
+<input type="text" name="" value="" placeholder="Enter your Email Address">
+</div>	
+	
+<div class="textb">
 <label> Alamat :</label>
 <textarea></textarea>
 </div>
@@ -51,6 +65,9 @@
 </div>
 
 </form>
+		<audio src="lastjedi.mp3" autoplay="autoplay" hidden="hidden">
+		<audio src="lastjedi.ogg" autoplay="autoplay" hidden="hidden">
+		</audio></audio>
 </body>
 </head>
 </html>
