--- a/galeri.html
+++ b/galeri.html
@@ -9,9 +9,11 @@
 </head>
 <body>
 
+		
+
 		<div class ="kembali">
 		<a href="index.html">
-		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
+		<img src="back.png" alt="back.png" width="100px" height="auto"/><a>
 		</div>
 		<center><h1><p style ="color:yellow;font-family:lato-blackitalic"><marquee>
 FORTOFOLIO JEPRETAN KAMEK</h1></p></center></marquee>
@@ -107,6 +109,10 @@ FORTOFOLIO JEPRETAN KAMEK</h1></p></center></marquee>
 		
 	</div>
 	
+			
+		<audio src="media\01 Payung Teduh Akad.mp3" autoplay="autoplay" hidden="hidden">
+		<audio src="media\01 Payung Teduh Akad.ogg" autoplay="autoplay" hidden="hidden">
+		</audio></center></audio>
 </body>
 </head>
 </html>
