--- a/foto.html
+++ b/foto.html
@@ -5,7 +5,7 @@
 <body>
 		<div class ="kembali">
 		<a href="index.html">
-		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
+		<img src="back.png" alt="back.png" width="100px" height="auto"/><a>
 		</div>
 <center>
 <h2><p style ="color:blue;lato-blackitalic"><b>FORTOFOLIO FOTO</b></h2></p><pre>
