--- a/jadwal.html
+++ b/jadwal.html
@@ -7,7 +7,7 @@
 
 <div class ="kembali">
 		<a href="index.html">
-		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
+		<img src="back.png" alt="back.png" width="100px" height="auto"/><a>
 		</div>
 <h2><center> JADWAL KULIAH SEMESTER SAYA </h2></center>
 
