--- a/video.html
+++ b/video.html
@@ -8,10 +8,10 @@
 	
 </head>
 <body>
-
-		<div class ="kembali">
+	
+<div class ="kembali">
 		<a href="index.html">
-		<img src="back.png" alt="back.png" width="5%" height="auto"/><a>
+		<img src="back.png" alt="back.png" width="100px" height="auto"/><a>
 		</div>
 
 <center><h2><p style ="color:white;font-family:lato-blackitalic">
