--- a/video.html
+++ b/video.html
@@ -14,8 +14,8 @@
 		<img src="back.png" alt="back.png" width="100px" height="auto"/><a>
 		</div>
 
-<center><h2><p style ="color:white;font-family:lato-blackitalic">
-Content Video From My Instagram Story</p></center>
+<center><h2><p style ="color:white;font-family:lato-blackitalic"><marquee>
+	Content Video From My Instagram Story</h2></p></center></marquee>
 	<div class ="container">
 	<div class ="box">
 		<div class="imgBox">
