--- a/biodata.html
+++ b/biodata.html
@@ -130,7 +130,7 @@ hr{
 
 		<div class ="kembali">
 		<a href="index.html">
-		<img src="back.png" alt="back.png" width="6%" height="auto"/><a>
+		<img src="back.png" alt="back.png" width="100px" height="auto"/><a>
 		</div>
 		
 		<div class="container">
@@ -174,7 +174,7 @@ DATA LENGKAP DIRI</b></p></h2>
 	Pekerjaan	: Mahasiswi
 	Social Media 	:<i> @aldadwijois</i>
 	Hobi		: Gymnastic
-Kalimat Motivasi	:<i><B> Maintan your standard and dont invest too much</i></B><br>
+Kalimat Motivasi	:<i><B> Maintan your standard and dont invest too much</i></B><br></pre>
 </content>
 		
 		
