--- a/biodata.html
+++ b/biodata.html
@@ -213,7 +213,8 @@ DATA LENGKAP DIRI</b></p></h2>
 	Pekerjaan	: Mahasiswi
 	Social Media 	:<i> @aldadwijois</i>
 	Hobi		: Gymnastic
-Kalimat Motivasi	:<i><B> Maintan your standard and dont invest too much</i></B><br></pre>
+Kalimat Motivasi	:<i><B> Maintan your standard 
+			  and dont invest too much</i></B><br></pre>
 </content>
 		
 		
