--- a/biodata.html
+++ b/biodata.html
@@ -5,7 +5,7 @@
 </head>
 <style>
 body{
-	background-color: #16A086;
+	background-color: #1a6557;
 	margin: 0;
 	font-family: sans-serif;
 	
@@ -14,21 +14,21 @@ body{
 	width: 90%;
 	margin-left: auto;
 	margin-right:auto;
-	margin-top: 10px;
 }
 .table-container{
 	width: 100%;
+	font-size:25px;
 }
 
 .title{
 	background-color: #0F6177;
 	Color: white;
 	display:inline-block;
-	padding: 20 px 30px;
+	padding: 20 px 50px;
 	margin:0;
 	border-bottom-right-radius: 6px;
 	margin-bottom: 15px;
-	font-size:25px;
+	font-size: 30px;
 	min-width: 300px;
 	text-align:center;
 }
@@ -69,6 +69,7 @@ hr{
 	margin-top:10px;
 	Border-collapse: collapse;
 	width:100%;
+	font-size: 30px;
 }
 
 .table th{
@@ -102,8 +103,8 @@ hr{
 }
 
 .skill .content{
-	background-color:white;
-	color:#333333;
+	background-color:bluepwder;
+	color:#e0f7f3;
 	padding: 15px;
 }
 
@@ -119,7 +120,7 @@ hr{
 }
 
 .skill .level{
-	background-color:#0f6177;
+	background-color:#6f6f6f;
 	padding: 5px;
 	color: white;
 	text-align: center;
@@ -173,9 +174,6 @@ hr{
 		</div>
 		
 		<div class="container">
-		<center>
-			<h1><p style="color:white;"><marquee>Biodata Diri</p></h1></marquee>
-		</center>
 		
 		<table class ="table-container">
 		<tr>
@@ -270,9 +268,8 @@ Kalimat Motivasi	:<i><B> Maintan your standard
 		<hr>
 		<h1 class ="title">Penggunaan Aplikasi Editor Yang Sering digunakan</h1>
 		<b><p style="color:white; font-family:sans-serif;">
-	   Penggunaan Aplikasi yang sering saya gunakan dalam mengedit sebuah konten,
-	   <br>baik itu untuk kebutuhan instastory ataupun konsumsi pribadi.<br>
-	   Berikut ini adalah level keseringan saya menggunakan aplikasi tersebut.</p></b>
+	   Penggunaan Aplikasi yang sering saya gunakan<br>dalam mengedit sebuah konten.
+	   </p></b>
 		<div class="content">
 		<ul>
 				<li>
@@ -291,7 +288,7 @@ Kalimat Motivasi	:<i><B> Maintan your standard
 		
 				<li>
 					<b>Lightroom</b>
-					<div class ="level" style="width:70%">
+					<div class ="level" style="width:50%">
 					70%
 					</div>
 				</li>
