--- a/jadwal.html
+++ b/jadwal.html
@@ -17,7 +17,7 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 .isi {background: rgb(208, 157, 0); color:#000; padding: 5px;}
 .isi1 {background: yellow; color:#000; padding: 5px;}
 .isi2 {background: rgb(208, 174, 0); color:#000; padding: 5px;}
-.akun {margin: auto; top: 500px; width: 1000px; height: 650px}
+.akun {margin: auto; top: 500px; width: 1000px; height: 450px}
 </style>
 	<table border="2" cellspacing ="0">
 	<tr>
@@ -101,10 +101,10 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 </table>
 <br>
 <br>
-<h2><center> Silahkan Cek Jadwal Mata Kuliah Anda dengan SIAKAD UNTAN </h2></center>
+<h2><center> Anda Juga Dapat Mencari Data Mahasiswa</h2></center>
 
 		<div class="akun">
-<iframe src="http://mahasiswa.siakad.untan.ac.id/"width="1000px" height="650px"></iframe>
+<iframe src="http://simalum.untan.ac.id/?page_id=1003"width="1000px" height="450px"></iframe>
 </div>
 </body>
 </html>
