--- a/jadwal.html
+++ b/jadwal.html
@@ -101,10 +101,10 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 </table>
 <br>
 <br>
-<h2><center> Anda Juga Dapat Mencari Data Mahasiswa</h2></center>
+<h2><center> Anda Juga Dapat Melihat Hasil Tugas Saya Di Youtube</h2></center>
 
 		<div class="akun">
-<iframe src="http://simalum.untan.ac.id/?page_id=1003"width="1000px" height="450px"></iframe>
+<iframe src="https://www.youtube.com/channel/UCc_kdx7Br8l5BORi26v7CHQ" height="450px"></iframe>
 </div>
 </body>
 </html>
