--- a/jadwal.html
+++ b/jadwal.html
@@ -3,6 +3,16 @@
 <head>
 <title> Jadwal Pribadi </title>
 <head>
+	
+	<style>
+th {background-color: rgb(208, 174, 0); color:black;}
+table {margin: auto; top: 500px; width: 1000px; height: 500px}
+.isi {background: rgb(208, 157, 0); color:#000; padding: 5px;}
+.isi1 {background: yellow; color:#000; padding: 5px;}
+.isi2 {background: rgb(208, 174, 0); color:#000; padding: 5px;}
+.akun {margin: auto; top: 500px; width: 1000px; height: 425px}
+</style>
+	
 <body>
 
 <div class ="kembali">
@@ -11,14 +21,7 @@
 		</div>
 <h2><center> JADWAL KULIAH SEMESTER SAYA </h2></center>
 
-<style>
-th {background-color: rgb(208, 174, 0); color:black;}
-table {margin: auto; top: 500px; width: 1000px; height: 500px}
-.isi {background: rgb(208, 157, 0); color:#000; padding: 5px;}
-.isi1 {background: yellow; color:#000; padding: 5px;}
-.isi2 {background: rgb(208, 174, 0); color:#000; padding: 5px;}
-.akun {margin: auto; top: 500px; width: 1000px; height: 450px}
-</style>
+
 	<table border="2" cellspacing ="0">
 	<tr>
 	
@@ -101,10 +104,10 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 </table>
 <br>
 <br>
-<h2><center> Anda Juga Dapat Melihat Hasil Tugas Saya Di Youtube</h2></center>
+<h2><center> Anda Juga Dapat Melihat Tulisan Saya Di Blog</h2></center>
 
 		<div class="akun">
-<iframe src="https://www.youtube.com/channel/UCc_kdx7Br8l5BORi26v7CHQ" height="450px"></iframe>
+<iframe width="1000px" Height="425px" src ="http://aldjoistask.blogspot.com/"></iframe>
 </div>
 </body>
 </html>
