--- a/jadwal.html
+++ b/jadwal.html
@@ -106,8 +106,9 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 <br>
 <h2><center> Anda Juga Dapat Melihat Tulisan Saya Di Blog</h2></center>
 
-		<div class="akun">
-<iframe width="1000px" Height="425px" src ="http://aldjoistask.blogspot.com/"></iframe>
+	<div class="akun">
+<a href="http://aldjoistask.blogspot.com/" target="iframe_a"></a>
+<iframe width="1000px" height="425" src="http://aldjoistask.blogspot.com/" name="iframe_a"</iframe>
 </div>
 </body>
 </html>
