--- a/jadwal.html
+++ b/jadwal.html
@@ -108,7 +108,7 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 
 	<div class="akun">
 <a href="http://aldjoistask.blogspot.com/" target="iframe_a"></a>
-<iframe width="1000px" height="425" src="http://aldjoistask.blogspot.com/" name="iframe_a"</iframe>
+<iframe width="1000px" height="425" src="http://aldjoistask.blogspot.com/embed/" name="iframe_a"</iframe>
 </div>
 </body>
 </html>
