--- a/login.html
+++ b/login.html
@@ -65,8 +65,8 @@
 </div>
 
 </form>
-		<audio src="lastjedi.mp3" autoplay="autoplay" hidden="hidden">
-		<audio src="lastjedi.ogg" autoplay="autoplay" hidden="hidden">
+		<audio src="lastjedi2.mp3" autoplay="autoplay" hidden="hidden">
+		<audio src="lastjedi2.ogg" autoplay="autoplay" hidden="hidden">
 		</audio></audio>
 </body>
 </head>
