--- a/video.html
+++ b/video.html
@@ -53,8 +53,8 @@
 		
 		</div>
 		<center><br><br>
-		<audio src="media\01 Payung Teduh Akad.mp3" autoplay="autoplay" hidden="hidden">
-		<audio src="media\01 Payung Teduh Akad.ogg" autoplay="autoplay" hidden="hidden">
+		<audio src="bitterlove.mp3" autoplay="autoplay" hidden="hidden">
+		<audio src="bitterlove.ogg" autoplay="autoplay" hidden="hidden">
 		</audio></center></audio>
 </body>
 </head>
