--- a/galeri.html
+++ b/galeri.html
@@ -110,8 +110,8 @@ FORTOFOLIO JEPRETAN KAMEK</h1></p></center></marquee>
 	</div>
 	
 			
-		<audio src="media\01 Payung Teduh Akad.mp3" autoplay="autoplay" hidden="hidden">
-		<audio src="media\01 Payung Teduh Akad.ogg" autoplay="autoplay" hidden="hidden">
+		<audio src="bitterlove.mp3" autoplay="autoplay" hidden="hidden">
+		<audio src="bitterlove.ogg" autoplay="autoplay" hidden="hidden">
 		</audio></center></audio>
 </body>
 </head>
