--- a/jadwal.html
+++ b/jadwal.html
@@ -40,7 +40,7 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 			<td class="isi">	Pemrograman Web *</td>
 			<td class="isi">	Selasa</td>
 			<td class="isi">	10.10-11.50</td>
-			<td class="isi">Morteza Mutaharhari, S.Kom.,M.T.I</td>
+			<td class="isi">Morteza Muthahhari, S.Kom.,M.T.I</td>
 	</tr>
 	
 	
@@ -67,7 +67,7 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 			<td class="isi">	Kecerdasan Buatan</td>
 			<td class="isi">	Kamis</td>
 			<td class="isi">	09.20-11.50</td>
-			<td class="isi">Dr. Yus Shola, ST.,MT</td>
+			<td class="isi">Dr. Yus Sholva, ST.,MT</td>
 	</tr>
 	
 		<tr>
@@ -91,7 +91,7 @@ table {margin: auto; top: 500px; width: 1000px; height: 500px}
 			<td class="isi">	Penulisan Proposal Tugas Akhir</td>
 			<td class="isi">	Senin</td>
 			<td class="isi">	10.10-11.50</td>
-			<td class="isi">Dr. Yus Shola, ST.,MT</td>
+			<td class="isi">Dr. Yus Sholva, ST.,MT</td>
 	</tr>
 	
 	<tr>
