--- a/login.html
+++ b/login.html
@@ -29,15 +29,16 @@
 <label> Full Name :</label>
 <input type="text" name="" value="" placeholder= "Enter your Name">
 </div>
+	
+	<div class="textb">
+<label> username instagram anda :</label>
+<input type="text" name="" value="" placeholder="Enter your username instagram">
+</div>
+
 
 <div class="textb">
 <label> Password :</label>
 <input type="password" name="" value="" placeholder="Enter your Password">
-</div>
-
-<div class="textb">
-<label> username :</label>
-<input type="text" name="" value="" placeholder="Enter your username">
 </div>
 
 <div class="textb">
@@ -49,6 +50,11 @@
 <label> Email Address:</label>
 <input type="text" name="" value="" placeholder="Enter your Email Address">
 </div>	
+	
+	<div class="textb">
+<label> Alasan Berkunjung:</label>
+<input type="text" name="" value="" placeholder="Enter your Alasan">
+</div>
 	
 <div class="textb">
 <label> Alamat :</label>
